src/objects/Invoice_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Invoice_Quantity__c  *  Unit_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consolidated_Time_Sheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consolidated Time Sheet</label>
        <referenceTo>Consolidated_Time_Sheet__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_LineItem_Tax_Amount__c</fullName>
        <label>Invoice LineItem Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Line_Item_Name__c</fullName>
        <label>Invoice Line Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Invoice Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Item</label>
        <referenceTo>Sales_Order_Item__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Rate__c</fullName>
        <label>Unit Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>ILIN-{0000000000}</displayFormat>
        <label>Invoice Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>